(PC-37019)[PRO] fix: get rid of extra margin for radiobuttongroup title in recurrenceform + allow radiobuttongroup to be used within /creation/collectif/selection

--- a/pro/src/components/IndividualOffer/StocksEventCreation/RecurrenceForm.module.scss
+++ b/pro/src/components/IndividualOffer/StocksEventCreation/RecurrenceForm.module.scss
@@ -8,19 +8,23 @@
   margin-bottom: rem.torem(32px);
 }
 
-.legend {
+.legend,
+.legend-without-margin {
   @include fonts.title4;
 
   display: flex;
   align-items: center;
   gap: rem.torem(10px);
-  margin-bottom: rem.torem(16px);
 
   &-icon {
     width: rem.torem(20px);
     height: rem.torem(20px);
     color: var(--color-icon-brand-primary);
   }
+}
+
+.legend {
+  margin-bottom: rem.torem(16px);
 }
 
 .radio-group {
