--- a/pro/src/pages/CollectiveOfferSelectionDuplication/CollectiveOfferSelectionDuplication.module.scss
+++ b/pro/src/pages/CollectiveOfferSelectionDuplication/CollectiveOfferSelectionDuplication.module.scss
@@ -8,7 +8,7 @@
 }
 
 .search-input-container {
-  margin-bottom: rem.torem(16px)
+  margin-bottom: rem.torem(16px);
 }
 
 .sub-title {
@@ -37,10 +37,6 @@
   &-text {
     margin-bottom: rem.torem(20px);
   }
-}
-
-.offers-description {
-  margin-bottom: rem.torem(8px);
 }
 
 .visually-hidden {
